<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/surface"
    android:orientation="vertical"
    android:padding="@dimen/spacing_xl">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_xs"
        android:text="@string/pos_draft_list_title"
        android:textAppearance="@style/TextAppearance.Materialku.Title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_md"
        android:text="@string/pos_draft_list_hint"
        android:textAppearance="@style/TextAppearance.Materialku.Caption"
        android:textColor="@color/on_surface_variant" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvDraft"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="360dp"
        android:nestedScrollingEnabled="true" />

    <TextView
        android:id="@+id/tvEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="@dimen/spacing_lg"
        android:text="@string/pos_draft_empty"
        android:textAppearance="@style/TextAppearance.Materialku.Body"
        android:textColor="@color/on_surface_variant"
        android:visibility="gone" />

</LinearLayout>
